# logix

./: LICENSE  README.md  logix.cabal
exe/: Main.hs
src/: Calculi.hs  Calculus.hs  Logix.hs  Main.hs  PPCalculus.hs  Parse.hs  ParseSequent.hs  Utils.hs
src/Data/: Splittable.hs
src/Data/MultiSet/: Extras.hs
src/Logix/: Calculi.hs  Pretty.hs  Types.hs
src/Old/: Calculi.hs  Calculus.hs  Main.hs  Parse.hs  Scratch.hs
