name:                logix
version:             0.2.0
-- synopsis:
-- description:
homepage:            https://github.com/benjaminselfridge/logix
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          benselfridge@gmail.com
copyright:           2017 Ben Selfridge
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable logix
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Calculus, Calculi, Parse, Utils, PPCalculus
  default-language:    Haskell2010
  build-depends:       base >= 4.7,
                       monadplus >= 1.4,
                       split

library
  hs-source-dirs:      src
  exposed-modules:     Calculus, Calculi, Parse, Utils, PPCalculus
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7,
                       monadplus >= 1.4,
                       split
