name:                logix
version:             0.2.1
-- synopsis:
-- description:
homepage:            https://github.com/benjaminselfridge/logix
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          benselfridge@gmail.com
copyright:           2017 Ben Selfridge
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable logix
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7,
                       logix,
                       brick,
                       microlens,
                       prettyprinter,
                       text,
                       vty
  ghc-options: -threaded

library
  hs-source-dirs:      src
  exposed-modules:     Logix
                       Logix.Pretty
                       Logix.Types
                       Data.MultiSet.Extras
                       Data.Splittable
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7,
                       containers,
                       mono-traversable,
                       multiset,
                       prettyprinter,
                       split,
                       text